added discord bot and website functionality

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BEST API ENDPOINT EVER</title>
+    <title>ARE YOU AWAKE?!?</title>
 </head>
 <body>
     <div id="app">
         <h1 id="awake">ARE YOU AWAKE?!?!?</h1>
-        <form action="/safe", method="get">
+        <form action="/safe.html", method="get">
             <button type="submit" id="yes">YES</button>
         </form>
     </div>
